--- a/src/scss/Pages/_index.scss
+++ b/src/scss/Pages/_index.scss
@@ -486,122 +486,14 @@
         .left-container {
             .head-text {
                 color: #FFF;
-                margin-bottom: 4.0rem;
+                margin-bottom: 4.8rem;
             }
 
             .review-content {
-                padding: 3.2rem 2.4rem;
+                padding: 4.8rem 2.4rem 3.2rem 2.4rem;
                 background-color: #FFF;
                 border-radius: 10px;
                 margin-bottom: 4.8rem;
-
-                .underline-wrapper {
-                    display: flex;
-                    flex-wrap: wrap;
-                    line-height: 3.6rem;
-                    color: $green_color;
-                    margin-bottom: 1.6rem;
-
-                    .underline-text {
-                        display: flex;
-                        align-items: flex-end;
-                        width: fit-content;
-
-                        &::after {
-                            bottom: 0;
-                        }
-
-                        .font-36-700 {
-                            font-family: 'Inter';
-                            color: $green_color;
-                            line-height: 3.6rem;
-                            margin-bottom: -0.5rem;
-                        }
-                    }
-
-                    .font-16-500 {
-                        font-size: 1.6rem;
-                        color: #333;
-                        margin-bottom: -0.5rem;
-                        line-height: 3.6rem;
-                    }
-                }
-
-                .three-contents {
-                    display: flex;
-                    column-gap: 1.0rem;
-                    margin-bottom: 1.6rem;
-
-                    .content {
-                        padding: 0.8rem 1.0rem;
-                        text-align: center;
-                        border: 1px solid #6f6f6f;
-                        background: #e4e4e4;
-                        line-height: 2.4rem;
-                    }
-                }
-
-                .suumo-review {
-                    margin-bottom: 1.2rem;
-
-                    span {
-                        font-family: "Inter";
-                    }
-                }
-
-                .suumo-desc {
-                    line-height: 2.4rem;
-                    letter-spacing: 0;
-                    margin-bottom: 2.4rem;
-                }
-
-                .google-review {
-                    margin-bottom: 3.2rem;
-                }
-
-                .stars-img {
-                    display: flex;
-                    align-items: flex-end;
-                    column-gap: 2.4rem;
-
-                    .stars {
-                        width: 56%;
-
-                        .label {
-                            margin-bottom: 2.0rem;
-                            white-space: nowrap;
-                        }
-
-                        .star-wrapper {
-                            display: flex;
-                            align-items: center;
-                            width: fit-content;
-                            padding: 0.5rem 2rem;
-                            border-radius: 90px;
-                            background-color: $green_color;
-                            column-gap: 0.4rem;
-
-                            &:not(:last-child) {
-                                margin-bottom: 0.5rem;
-                            }
-
-                            .star {
-                                width: 2.4rem;
-                                height: 2.4rem;
-                            }
-
-                            span {
-                                color: #FFF;
-                                margin-left: 1.6rem;
-                            }
-                        }
-                    }
-
-                    .image007 {
-                        width: 42%;
-                        height: fit-content;
-                    }
-                }
             }
         }
 
@@ -1239,6 +1131,7 @@
 
     .distinction {
         padding: 12rem 0;
+        background: #fdfaf1;
 
         .container {
             position: relative;
@@ -1474,7 +1367,7 @@
     }
 
     .company {
-        padding: 14rem 0;
+        padding: 14rem 0 6.4rem 0;
         background-image: url(../img/bg_blue.png);
         background-repeat: repeat;
         background-position: 50% 20px;
@@ -1714,15 +1607,18 @@
 
         .profile-wrapper {
             margin-bottom: 4.8rem;
+
             .sub-head-text {
                 margin-bottom: 2.4rem;
             }
+
             .company-profile {
                 .record {
                     width: 100%;
                     position: relative;
                     display: flex;
                     border-bottom: 1px solid #e4e4e4;
+
                     &:first-child {
                         border-top: 1px solid #e4e4e4;
                     }
@@ -1732,6 +1628,7 @@
                         padding: 2.0rem 2.4rem;
                         background: #f7f7f7;
                     }
+
                     .table-content {
                         width: 75%;
                         padding: 1.2rem 2.4rem;
@@ -1746,6 +1643,7 @@
             border-radius: 15px;
             background: #99e696;
             padding: 3.2rem;
+
             .title-wrapper {
                 display: flex;
                 column-gap: 1.2rem;
@@ -1758,11 +1656,136 @@
                 }
 
             }
+
             .content {
                 line-height: 2.4rem;
             }
         }
     }
 
-    
+    .review-again {
+        padding: 6.4rem 0;
+        .review-content {
+            display: flex;
+            column-gap: 4.8rem;
+            padding: 2.4rem;
+            border-radius: 10px;
+            background: $green_color;
+
+            .stars-img {
+                width: 60%;
+                flex-shrink: 0;
+                margin-bottom: 0;
+            }
+
+            .content-wrapper {
+                .title {
+                    color: #FFF;
+                }
+                .content {
+                    color: #FFF;
+                }
+            }
+        }
+    }
+
+    .before-after {
+        padding: 14rem 0;
+        .head-text {
+            color: $red_color;
+            text-shadow: 3px 3px 2px #F5E07D;
+            margin-bottom: 4.8rem;
+        }
+        .desc {
+            line-height: 2.4rem;
+            margin-bottom: 3.2rem;
+        }
+        .tables-wrapper {
+            position: relative;
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0px, 1fr));
+            column-gap: 0.2rem;
+
+            .symbol-marks {
+                position: absolute;
+                top: -0.8rem;
+                right: 0;
+                transform: translate(0, -100%);
+                .column-wrapper {
+                    display: flex;
+                    height: 3.2rem;
+                    .color {
+                        width: 8.6rem;
+                        background: #eaeaea;
+                    }
+                    &:first-child {
+                        .color {
+                            background: #eaeaea;
+                        }
+                    }
+                    &:nth-child(2) {
+                        .color {
+                            background: #ffd9d9;
+                        }
+                    }
+                    &:last-child {
+                        .color {
+                            background: #ccffcc;
+                        }
+                    }
+                    .label {
+                        width: fit-content;
+                        padding: 0 1.6rem;
+                        display: flex;
+                        align-items: center;
+                    }
+                }
+            }
+
+            .record {
+                width: 100%;
+                position: relative;
+                height: 4.6rem;
+                display: flex;
+                border-right: 1px solid #d2d2d2;
+                border-left: 1px solid #d2d2d2;
+                border-bottom: 1px solid #d2d2d2;
+                &:first-child {
+                    border-top: 1px solid #d2d2d2;
+                    .classify {
+                        color: $green_color;
+                    }
+                    .smareno {
+                        color: $green_color;
+                    }
+                    .other {
+                        color: $green_color;
+                    }
+                }
+                .classify  {
+                    width: 42%;
+                    display: flex;
+                    align-items: center;
+                    flex-shrink: 0;
+                    background: #eaeaea;
+                    padding: 0.8rem 1.6rem;
+                }
+                .smareno {
+                    width: 30%;
+                    display: flex;
+                    align-items: center;
+                    flex-shrink: 0;
+                    background: #ffd9d9;
+                    padding: 0.8rem 1.6rem;
+                }
+                .other {
+                    width: 28%;
+                    display: flex;
+                    align-items: center;
+                    background: #ccffcc;
+                    padding: 0.8rem 1.6rem;
+                }
+            }
+        }
+    }
 }
