--- a/src/scss/Component/_component.scss
+++ b/src/scss/Component/_component.scss
@@ -17,11 +17,69 @@
     text-align: center;
     text-decoration: none;
     outline: none;
-    -webkit-transition: all 0.6s cubic-bezier(0.8, 0, 0.2, 1);
     transition: all 0.6s cubic-bezier(0.8, 0, 0.2, 1);
     border-radius: 2.5rem;
     cursor: pointer;
     z-index: 0;
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: block;
+        border-radius: inherit;
+        border: 2px solid #3B8E65;
+        z-index: 2;
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        background: #FFFFFF;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1);
+        transform-origin: right top;
+        transform: scale(0, 1);
+        z-index: 1;
+    }
+
+    &:hover {
+        color: #3B8E65;
+
+        &::before {
+            transform-origin: left top;
+            transform: scale(1, 1);
+        }
+    }
+
+    span {
+        position: relative;
+        color: inherit;
+        font-weight: inherit;
+        text-decoration: none;
+        z-index: 3;
+    }
+
+    &.btn-green {
+        background: $green-color;
+        color: #FFF;
+        border-radius: 5px;
+
+        &::after {
+            border: unset;
+        }
+
+        &::before {
+            background: #ffc520;
+        }
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -31,63 +89,9 @@
         line-height: 2.4rem;
         letter-spacing: 0.1em;
         border-radius: 2.5rem;
+
+        &::after {
+            border-width: 2px;
+        }
     }
-}
-
-.btn span {
-    position: relative;
-    color: inherit;
-    font-weight: inherit;
-    text-decoration: none;
-    z-index: 3;
-}
-
-.btn::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
-    border-radius: 2.5rem;
-    border: 2px solid #3B8E65;
-    z-index: 2;
-}
-
-@media only screen and (max-width: 768px) {
-    .btn::after {
-        border-width: 2px;
-    }
-}
-
-.btn::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    background: #FFFFFF;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1);
-    transition: -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1);
-    transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1);
-    transition: transform 0.6s cubic-bezier(0.8, 0, 0.2, 1), -webkit-transform 0.6s cubic-bezier(0.8, 0, 0.2, 1);
-    -webkit-transform-origin: right top;
-    transform-origin: right top;
-    -webkit-transform: scale(0, 1);
-    transform: scale(0, 1);
-    z-index: 1;
-}
-
-.btn:hover {
-    color: #3B8E65;
-}
-
-.btn:hover::before {
-    -webkit-transform-origin: left top;
-    transform-origin: left top;
-    -webkit-transform: scale(1, 1);
-    transform: scale(1, 1);
 }
