--- a/src/scss/Layout/_header.scss
+++ b/src/scss/Layout/_header.scss
@@ -23,6 +23,18 @@
         height: 100%;
         margin-left: auto;
         margin-right: auto;
+
+        .contact-nav {
+            .contact-wrapper {
+                display: flex;
+                justify-content: flex-end;
+                column-gap: 1.6rem;
+                margin-bottom: 1.2rem;
+                .btn {
+                    height: 4.8rem;
+                }
+            }
+        }
     }
 
     .header-logo {
